--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -402,7 +402,66 @@
     "timerStart": "ابدأ",
     "timerPause": "إيقاف مؤقت",
     "timerReset": "إعادة ضبط",
-    "notFound": "الوصفة غير موجودة"
+    "notFound": "الوصفة غير موجودة",
+    "tabRecipe": "الوصفة",
+    "tabSource": "المصدر",
+    "nutrition": {
+      "nutritionFacts": "القيم الغذائية",
+      "servingsPerContainer": "{{count}} حصة لكل عبوة",
+      "servingsPerContainerOne": "1 حصة لكل عبوة",
+      "servingSize": "حجم الحصة",
+      "amountPerServing": "الكمية لكل حصة",
+      "calories": "السعرات الحرارية",
+      "dailyValue": "% القيمة اليومية *",
+      "ofContainer": "من العبوة",
+      "totalFat": "إجمالي الدهون",
+      "totalCarbohydrate": "إجمالي الكربوهيدرات",
+      "dietaryFiber": "الألياف الغذائية",
+      "totalSugars": "إجمالي السكريات",
+      "protein": "البروتين",
+      "sodium": "الصوديوم",
+      "caloriesPerGram": "السعرات الحرارية لكل جرام: الدهون {{fat}} • الكربوهيدرات {{carb}} • البروتين {{protein}}",
+      "nutritionNotAvailable": "* معلومات التغذية غير متوفرة لهذه الوصفة.",
+      "dailyValueNote": "* يخبرك % القيمة اليومية (DV) بمدى مساهمة العنصر الغذائي في حصة الطعام في النظام الغذائي اليومي. يتم استخدام 2000 سعرة حرارية يوميًا للنصائح الغذائية العامة."
+    },
+    "units": {
+      "cup": "كوب",
+      "cups": "أكواب",
+      "tablespoon": "ملعقة كبيرة",
+      "tablespoons": "ملاعق كبيرة",
+      "teaspoon": "ملعقة صغيرة",
+      "teaspoons": "ملاعق صغيرة",
+      "pound": "رطل",
+      "pounds": "أرطال",
+      "ounce": "أونصة",
+      "ounces": "أونصات",
+      "gram": "جرام",
+      "grams": "جرامات",
+      "milliliter": "مليلتر",
+      "milliliters": "مليلترات",
+      "count": "قطعة",
+      "half": "نصف",
+      "quarter": "ربع",
+      "third": "ثلث"
+    },
+    "preparation": {
+      "diced": "مقطع مكعبات",
+      "chopped": "مقطع",
+      "minced": "مفروم",
+      "sliced": "مقطع شرائح",
+      "cubed": "مكعبات",
+      "julienned": "مقطع شرائح رفيعة",
+      "crushed": "مطحون",
+      "grated": "مبشور",
+      "shredded": "مقطع شرائح",
+      "whole": "كامل",
+      "peeled": "مقشر",
+      "seeded": "منزوع البذور",
+      "small": "صغير",
+      "large": "كبير",
+      "fine": "ناعم",
+      "coarse": "خشن"
+    }
   },
   "ingredient": {
     "notFound": "Ingredient not found",
