--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -481,7 +481,66 @@
     "timerStart": "Iniciar",
     "timerPause": "Pausar",
     "timerReset": "Reiniciar",
-    "notFound": "Receta no encontrada"
+    "notFound": "Receta no encontrada",
+    "tabRecipe": "Receta",
+    "tabSource": "Fuente",
+    "nutrition": {
+      "nutritionFacts": "Información Nutricional",
+      "servingsPerContainer": "{{count}} porciones por envase",
+      "servingsPerContainerOne": "1 porción por envase",
+      "servingSize": "Tamaño de la porción",
+      "amountPerServing": "Cantidad por porción",
+      "calories": "Calorías",
+      "dailyValue": "% valor diario *",
+      "ofContainer": "del envase",
+      "totalFat": "Grasa total",
+      "totalCarbohydrate": "Carbohidratos totales",
+      "dietaryFiber": "Fibra dietética",
+      "totalSugars": "Azúcares totales",
+      "protein": "Proteína",
+      "sodium": "Sodio",
+      "caloriesPerGram": "Calorías por gramo: Grasa {{fat}} • Carbohidrato {{carb}} • Proteína {{protein}}",
+      "nutritionNotAvailable": "* La información nutricional no está disponible para esta receta.",
+      "dailyValueNote": "* El % del valor diario (VD) le indica cuánto contribuye un nutriente en una porción de alimento a una dieta diaria. Se utilizan 2,000 calorías al día para consejos nutricionales generales."
+    },
+    "units": {
+      "cup": "taza",
+      "cups": "tazas",
+      "tablespoon": "cucharada",
+      "tablespoons": "cucharadas",
+      "teaspoon": "cucharadita",
+      "teaspoons": "cucharaditas",
+      "pound": "libra",
+      "pounds": "libras",
+      "ounce": "onza",
+      "ounces": "onzas",
+      "gram": "gramo",
+      "grams": "gramos",
+      "milliliter": "mililitro",
+      "milliliters": "mililitros",
+      "count": "unidad",
+      "half": "medio",
+      "quarter": "cuarto",
+      "third": "tercio"
+    },
+    "preparation": {
+      "diced": "en cubos",
+      "chopped": "picado",
+      "minced": "picado fino",
+      "sliced": "en rodajas",
+      "cubed": "en cubos",
+      "julienned": "en juliana",
+      "crushed": "triturado",
+      "grated": "rallado",
+      "shredded": "desmenuzado",
+      "whole": "entero",
+      "peeled": "pelado",
+      "seeded": "sin semillas",
+      "small": "pequeño",
+      "large": "grande",
+      "fine": "fino",
+      "coarse": "grueso"
+    }
   },
   "ingredient": {
     "notFound": "Ingredient not found",
