--- a/i18n/locales/fr-CA.json
+++ b/i18n/locales/fr-CA.json
@@ -573,7 +573,66 @@
     "timerStart": "Démarrer",
     "timerPause": "Pause",
     "timerReset": "Réinitialiser",
-    "notFound": "Recette introuvable"
+    "notFound": "Recette introuvable",
+    "tabRecipe": "Recette",
+    "tabSource": "Source",
+    "nutrition": {
+      "nutritionFacts": "Valeurs nutritives",
+      "servingsPerContainer": "{{count}} portions par contenant",
+      "servingsPerContainerOne": "1 portion par contenant",
+      "servingSize": "Taille de la portion",
+      "amountPerServing": "Quantité par portion",
+      "calories": "Calories",
+      "dailyValue": "% valeur quotidienne *",
+      "ofContainer": "du contenant",
+      "totalFat": "Lipides totaux",
+      "totalCarbohydrate": "Glucides totaux",
+      "dietaryFiber": "Fibres alimentaires",
+      "totalSugars": "Sucres totaux",
+      "protein": "Protéines",
+      "sodium": "Sodium",
+      "caloriesPerGram": "Calories par gramme : Lipides {{fat}} • Glucides {{carb}} • Protéines {{protein}}",
+      "nutritionNotAvailable": "* Les informations nutritionnelles ne sont pas disponibles pour cette recette.",
+      "dailyValueNote": "* Le % de la valeur quotidienne (VQ) vous indique la quantité d'un nutriment dans une portion d'aliment qui contribue à un régime quotidien. 2 000 calories par jour sont utilisées pour les conseils nutritionnels généraux."
+    },
+    "units": {
+      "cup": "tasse",
+      "cups": "tasses",
+      "tablespoon": "cuillère à soupe",
+      "tablespoons": "cuillères à soupe",
+      "teaspoon": "cuillère à café",
+      "teaspoons": "cuillères à café",
+      "pound": "livre",
+      "pounds": "livres",
+      "ounce": "once",
+      "ounces": "onces",
+      "gram": "gramme",
+      "grams": "grammes",
+      "milliliter": "millilitre",
+      "milliliters": "millilitres",
+      "count": "unité",
+      "half": "demi",
+      "quarter": "quart",
+      "third": "tiers"
+    },
+    "preparation": {
+      "diced": "en dés",
+      "chopped": "haché",
+      "minced": "haché fin",
+      "sliced": "en tranches",
+      "cubed": "en cubes",
+      "julienned": "en julienne",
+      "crushed": "écrasé",
+      "grated": "râpé",
+      "shredded": "râpé",
+      "whole": "entier",
+      "peeled": "pelé",
+      "seeded": "épépiné",
+      "small": "petit",
+      "large": "grand",
+      "fine": "fin",
+      "coarse": "gros"
+    }
   },
   "legal": {
     "privacy": {
