--- a/i18n/locales/hi.json
+++ b/i18n/locales/hi.json
@@ -522,7 +522,45 @@
     "timerStart": "शुरू",
     "timerPause": "रोकें",
     "timerReset": "रीसेट",
-    "notFound": "रेसिपी नहीं मिली"
+    "notFound": "रेसिपी नहीं मिली",
+    "units": {
+      "cup": "कप",
+      "cups": "कप",
+      "tablespoon": "चम्मच",
+      "tablespoons": "चम्मच",
+      "teaspoon": "चाय का चम्मच",
+      "teaspoons": "चाय के चम्मच",
+      "pound": "पाउंड",
+      "pounds": "पाउंड",
+      "ounce": "औंस",
+      "ounces": "औंस",
+      "gram": "ग्राम",
+      "grams": "ग्राम",
+      "milliliter": "मिलीलीटर",
+      "milliliters": "मिलीलीटर",
+      "count": "संख्या",
+      "half": "आधा",
+      "quarter": "चौथाई",
+      "third": "तिहाई"
+    },
+    "preparation": {
+      "diced": "कटा हुआ",
+      "chopped": "कटा हुआ",
+      "minced": "बारीक कटा हुआ",
+      "sliced": "स्लाइस",
+      "cubed": "क्यूब्स",
+      "julienned": "पतली स्लाइस",
+      "crushed": "कुचला हुआ",
+      "grated": "कद्दूकस",
+      "shredded": "कद्दूकस",
+      "whole": "पूरा",
+      "peeled": "छिला हुआ",
+      "seeded": "बीज निकाला हुआ",
+      "small": "छोटा",
+      "large": "बड़ा",
+      "fine": "बारीक",
+      "coarse": "मोटा"
+    }
   },
   "ingredient": {
     "notFound": "सामग्री नहीं मिली",
