--- a/i18n/locales/tl.json
+++ b/i18n/locales/tl.json
@@ -402,7 +402,66 @@
     "timerStart": "Simulan",
     "timerPause": "I-pause",
     "timerReset": "I-reset",
-    "notFound": "Hindi natagpuan ang recipe"
+    "notFound": "Hindi natagpuan ang recipe",
+    "tabRecipe": "Recipe",
+    "tabSource": "Pinagmulan",
+    "nutrition": {
+      "nutritionFacts": "Impormasyon sa Nutrisyon",
+      "servingsPerContainer": "{{count}} na serving bawat lalagyan",
+      "servingsPerContainerOne": "1 serving bawat lalagyan",
+      "servingSize": "Laki ng serving",
+      "amountPerServing": "Dami bawat serving",
+      "calories": "Calories",
+      "dailyValue": "% Halaga ng Araw-araw *",
+      "ofContainer": "ng lalagyan",
+      "totalFat": "Kabuuang Taba",
+      "totalCarbohydrate": "Kabuuang Carbohydrate",
+      "dietaryFiber": "Dietary Fiber",
+      "totalSugars": "Kabuuang Asukal",
+      "protein": "Protina",
+      "sodium": "Sodium",
+      "caloriesPerGram": "Calories bawat gramo: Taba {{fat}} • Carbohydrate {{carb}} • Protina {{protein}}",
+      "nutritionNotAvailable": "* Ang impormasyon sa nutrisyon ay hindi available para sa recipe na ito.",
+      "dailyValueNote": "* Ang % Halaga ng Araw-araw (DV) ay nagsasabi sa iyo kung gaano karaming nutrient sa isang serving ng pagkain ang nag-aambag sa isang araw-araw na diyeta. 2,000 Calories bawat araw ang ginagamit para sa pangkalahatang payo sa nutrisyon."
+    },
+    "units": {
+      "cup": "tasa",
+      "cups": "tasa",
+      "tablespoon": "kutsara",
+      "tablespoons": "kutsara",
+      "teaspoon": "kutsarita",
+      "teaspoons": "kutsarita",
+      "pound": "libra",
+      "pounds": "libra",
+      "ounce": "onsa",
+      "ounces": "onsa",
+      "gram": "gramo",
+      "grams": "gramo",
+      "milliliter": "mililitro",
+      "milliliters": "mililitro",
+      "count": "piraso",
+      "half": "kalahati",
+      "quarter": "sang-apat",
+      "third": "sangatlo"
+    },
+    "preparation": {
+      "diced": "tinadtad",
+      "chopped": "tinadtad",
+      "minced": "dinurog",
+      "sliced": "hiniwa",
+      "cubed": "tinadtad na parisukat",
+      "julienned": "hiniwa nang pahaba",
+      "crushed": "dinurog",
+      "grated": "ginadgad",
+      "shredded": "ginadgad",
+      "whole": "buo",
+      "peeled": "tinanggal ang balat",
+      "seeded": "tinanggal ang buto",
+      "small": "maliit",
+      "large": "malaki",
+      "fine": "pino",
+      "coarse": "magaspang"
+    }
   },
   "ingredient": {
     "notFound": "Ingredient not found",
