--- a/i18n/locales/ur.json
+++ b/i18n/locales/ur.json
@@ -522,7 +522,45 @@
     "timerStart": "شروع",
     "timerPause": "روکیں",
     "timerReset": "ری سیٹ",
-    "notFound": "ترکیب نہیں ملی"
+    "notFound": "ترکیب نہیں ملی",
+    "units": {
+      "cup": "کپ",
+      "cups": "کپ",
+      "tablespoon": "چمچ",
+      "tablespoons": "چمچ",
+      "teaspoon": "چائے کا چمچ",
+      "teaspoons": "چائے کے چمچ",
+      "pound": "پاؤنڈ",
+      "pounds": "پاؤنڈ",
+      "ounce": "اونس",
+      "ounces": "اونس",
+      "gram": "گرام",
+      "grams": "گرام",
+      "milliliter": "ملی لیٹر",
+      "milliliters": "ملی لیٹر",
+      "count": "عدد",
+      "half": "آدھا",
+      "quarter": "چوتھائی",
+      "third": "تیسرا"
+    },
+    "preparation": {
+      "diced": "کاٹا ہوا",
+      "chopped": "کاٹا ہوا",
+      "minced": "باریک کاٹا ہوا",
+      "sliced": "سلائس",
+      "cubed": "کیوبز",
+      "julienned": "پتلی سلائس",
+      "crushed": "کچلا ہوا",
+      "grated": "کدو کش",
+      "shredded": "کدو کش",
+      "whole": "پورا",
+      "peeled": "چھلکا اتارا ہوا",
+      "seeded": "بیج نکالا ہوا",
+      "small": "چھوٹا",
+      "large": "بڑا",
+      "fine": "باریک",
+      "coarse": "موٹا"
+    }
   },
   "ingredient": {
     "notFound": "جزو نہیں ملا",
