--- a/i18n/locales/vi.json
+++ b/i18n/locales/vi.json
@@ -402,7 +402,66 @@
     "timerStart": "Bắt đầu",
     "timerPause": "Tạm dừng",
     "timerReset": "Đặt lại",
-    "notFound": "Không tìm thấy công thức"
+    "notFound": "Không tìm thấy công thức",
+    "tabRecipe": "Công thức",
+    "tabSource": "Nguồn",
+    "nutrition": {
+      "nutritionFacts": "Thông tin dinh dưỡng",
+      "servingsPerContainer": "{{count}} khẩu phần mỗi hộp",
+      "servingsPerContainerOne": "1 khẩu phần mỗi hộp",
+      "servingSize": "Kích thước khẩu phần",
+      "amountPerServing": "Lượng mỗi khẩu phần",
+      "calories": "Calo",
+      "dailyValue": "% giá trị hàng ngày *",
+      "ofContainer": "của hộp",
+      "totalFat": "Tổng chất béo",
+      "totalCarbohydrate": "Tổng carbohydrate",
+      "dietaryFiber": "Chất xơ",
+      "totalSugars": "Tổng đường",
+      "protein": "Chất đạm",
+      "sodium": "Natri",
+      "caloriesPerGram": "Calo mỗi gram: Chất béo {{fat}} • Carbohydrate {{carb}} • Protein {{protein}}",
+      "nutritionNotAvailable": "* Thông tin dinh dưỡng không có sẵn cho công thức này.",
+      "dailyValueNote": "* % Giá trị hàng ngày (DV) cho bạn biết một chất dinh dưỡng trong một khẩu phần thực phẩm đóng góp bao nhiêu vào chế độ ăn hàng ngày. 2.000 Calo mỗi ngày được sử dụng cho lời khuyên dinh dưỡng chung."
+    },
+    "units": {
+      "cup": "cốc",
+      "cups": "cốc",
+      "tablespoon": "thìa canh",
+      "tablespoons": "thìa canh",
+      "teaspoon": "thìa cà phê",
+      "teaspoons": "thìa cà phê",
+      "pound": "pound",
+      "pounds": "pound",
+      "ounce": "ounce",
+      "ounces": "ounce",
+      "gram": "gam",
+      "grams": "gam",
+      "milliliter": "mililit",
+      "milliliters": "mililit",
+      "count": "cái",
+      "half": "nửa",
+      "quarter": "một phần tư",
+      "third": "một phần ba"
+    },
+    "preparation": {
+      "diced": "thái hạt lựu",
+      "chopped": "cắt nhỏ",
+      "minced": "băm nhỏ",
+      "sliced": "thái lát",
+      "cubed": "cắt khối",
+      "julienned": "thái sợi",
+      "crushed": "nghiền",
+      "grated": "bào",
+      "shredded": "xé nhỏ",
+      "whole": "nguyên",
+      "peeled": "gọt vỏ",
+      "seeded": "bỏ hạt",
+      "small": "nhỏ",
+      "large": "lớn",
+      "fine": "mịn",
+      "coarse": "thô"
+    }
   },
   "ingredient": {
     "notFound": "Ingredient not found",
