--- a/i18n/locales/zh.json
+++ b/i18n/locales/zh.json
@@ -402,7 +402,66 @@
     "timerStart": "开始",
     "timerPause": "暂停",
     "timerReset": "重置",
-    "notFound": "未找到食谱"
+    "notFound": "未找到食谱",
+    "tabRecipe": "食谱",
+    "tabSource": "来源",
+    "nutrition": {
+      "nutritionFacts": "营养成分",
+      "servingsPerContainer": "每份 {{count}} 份",
+      "servingsPerContainerOne": "每份 1 份",
+      "servingSize": "每份含量",
+      "amountPerServing": "每份含量",
+      "calories": "卡路里",
+      "dailyValue": "% 每日摄入量 *",
+      "ofContainer": "容器",
+      "totalFat": "总脂肪",
+      "totalCarbohydrate": "总碳水化合物",
+      "dietaryFiber": "膳食纤维",
+      "totalSugars": "总糖",
+      "protein": "蛋白质",
+      "sodium": "钠",
+      "caloriesPerGram": "每克卡路里：脂肪 {{fat}} • 碳水化合物 {{carb}} • 蛋白质 {{protein}}",
+      "nutritionNotAvailable": "* 此食谱的营养信息不可用。",
+      "dailyValueNote": "* % 每日摄入量 (DV) 告诉您一份食物中的营养素对每日饮食的贡献。每天 2,000 卡路里用于一般营养建议。"
+    },
+    "units": {
+      "cup": "杯",
+      "cups": "杯",
+      "tablespoon": "汤匙",
+      "tablespoons": "汤匙",
+      "teaspoon": "茶匙",
+      "teaspoons": "茶匙",
+      "pound": "磅",
+      "pounds": "磅",
+      "ounce": "盎司",
+      "ounces": "盎司",
+      "gram": "克",
+      "grams": "克",
+      "milliliter": "毫升",
+      "milliliters": "毫升",
+      "count": "个",
+      "half": "半",
+      "quarter": "四分之一",
+      "third": "三分之一"
+    },
+    "preparation": {
+      "diced": "切丁",
+      "chopped": "切碎",
+      "minced": "剁碎",
+      "sliced": "切片",
+      "cubed": "切块",
+      "julienned": "切丝",
+      "crushed": "压碎",
+      "grated": "磨碎",
+      "shredded": "切丝",
+      "whole": "整个",
+      "peeled": "去皮",
+      "seeded": "去籽",
+      "small": "小",
+      "large": "大",
+      "fine": "细",
+      "coarse": "粗"
+    }
   },
   "ingredient": {
     "notFound": "Ingredient not found",
