--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -577,7 +577,66 @@
     "timerStart": "Start",
     "timerPause": "Pause",
     "timerReset": "Reset",
-    "notFound": "Recipe not found"
+    "notFound": "Recipe not found",
+    "tabRecipe": "Recipe",
+    "tabSource": "Source",
+    "nutrition": {
+      "nutritionFacts": "Nutrition Facts",
+      "servingsPerContainer": "{{count}} Servings Per Container",
+      "servingsPerContainerOne": "1 Serving Per Container",
+      "servingSize": "Serving Size",
+      "amountPerServing": "Amount Per Serving",
+      "calories": "Calories",
+      "dailyValue": "% Daily Value *",
+      "ofContainer": "of container",
+      "totalFat": "Total Fat",
+      "totalCarbohydrate": "Total Carbohydrate",
+      "dietaryFiber": "Dietary Fiber",
+      "totalSugars": "Total Sugars",
+      "protein": "Protein",
+      "sodium": "Sodium",
+      "caloriesPerGram": "Calories per gram: Fat {{fat}} • Carbohydrate {{carb}} • Protein {{protein}}",
+      "nutritionNotAvailable": "* Nutrition information is not available for this recipe.",
+      "dailyValueNote": "* The % Daily Value (DV) tells you how much a nutrient in a serving of food contributes to a daily diet. 2,000 Calories a day is used for general nutrition advice."
+    },
+    "units": {
+      "cup": "cup",
+      "cups": "cups",
+      "tablespoon": "tablespoon",
+      "tablespoons": "tablespoons",
+      "teaspoon": "teaspoon",
+      "teaspoons": "teaspoons",
+      "pound": "pound",
+      "pounds": "pounds",
+      "ounce": "ounce",
+      "ounces": "ounces",
+      "gram": "gram",
+      "grams": "grams",
+      "milliliter": "milliliter",
+      "milliliters": "milliliters",
+      "count": "count",
+      "half": "half",
+      "quarter": "quarter",
+      "third": "third"
+    },
+    "preparation": {
+      "diced": "diced",
+      "chopped": "chopped",
+      "minced": "minced",
+      "sliced": "sliced",
+      "cubed": "cubed",
+      "julienned": "julienned",
+      "crushed": "crushed",
+      "grated": "grated",
+      "shredded": "shredded",
+      "whole": "whole",
+      "peeled": "peeled",
+      "seeded": "seeded",
+      "small": "small",
+      "large": "large",
+      "fine": "fine",
+      "coarse": "coarse"
+    }
   },
   "legal": {
     "privacy": {
