--- a/i18n/locales/fr-CA.json
+++ b/i18n/locales/fr-CA.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "signInTitle": "Se connecter ou créer un compte",
+    "signInTitle": "fr-CA - Se connecter ou créer un compte",
     "signUpCreatorTitle": "S'inscrire comme créateur",
     "signUpCreatorSubtitle": "Partagez votre expertise et publiez des recettes avec notre communauté.",
     "signUpVendorTitle": "S'inscrire comme vendeur",
