Translate nutrition goals

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -101,30 +101,30 @@
       "saveError": "تعذر حفظ تفضيلات المطبخ الخاصة بك. يُرجى المحاولة مرة أخرى."
     },
     "nutritionGoals": {
-      "title": "Nutrition goals",
-      "subtitle": "Tell us how you want to eat so we can surface the right recipes and hints.",
-      "starter": "Starter profile",
-      "categories": "Goal categories",
-      "categoriesHelper": "Pick every bucket that sounds relevant—we’ll resolve overlaps for you.",
-      "daily": "Daily targets",
-      "dailyHelper": "Set the metrics that matter most. Leave anything blank and we’ll adapt dynamically.",
-      "calories": "Calories (kcal)",
-      "protein": "Protein (g)",
-      "fat": "Fat (g)",
-      "carbs": "Carbohydrates (g)",
-      "secondary": "Secondary metrics",
-      "secondaryHelper": "Track these only if they’re relevant to your plan.",
-      "display": "Display preferences",
-      "displayHelper": "Choose what to see in meal views. We’ll still guide you silently.",
-      "perMeal": "Show per-meal targets",
-      "proteinOnly": "Show protein-only view",
-      "hideCalories": "Hide calorie totals",
-      "warnings": "Warnings vs suggestions",
-      "mealCount": "Meals per day",
-      "trainingHelper": "We’ll adjust for training vs rest days automatically.",
-      "advancedToggle": "Advanced",
-      "advancedShow": "Show optional numbers",
-      "advancedHide": "Hide advanced metrics"
+      "title": "أهداف التغذية",
+      "subtitle": "أخبرنا كيف تريد أن تتناول الطعام لنقدم لك الوصفات والإرشادات المناسبة.",
+      "starter": "الملف الابتدائي",
+      "categories": "فئات الأهداف",
+      "categoriesHelper": "اختر كل فئة تبدو مناسبة—سنحل التعارضات نيابةً عنك.",
+      "daily": "الأهداف اليومية",
+      "dailyHelper": "حدّد المقاييس الأكثر أهمية. اترك أي حقل فارغًا وسنتكيف تلقائيًا.",
+      "calories": "السعرات الحرارية (كيلو كالوري)",
+      "protein": "البروتين (غ)",
+      "fat": "الدهون (غ)",
+      "carbs": "الكربوهيدرات (غ)",
+      "secondary": "مقاييس ثانوية",
+      "secondaryHelper": "تتبّعها فقط إذا كانت ذات صلة بخطتك.",
+      "display": "تفضيلات العرض",
+      "displayHelper": "اختر ما تراه في عروض الوجبات. سنظل نوجّهك بهدوء.",
+      "perMeal": "إظهار الأهداف لكل وجبة",
+      "proteinOnly": "إظهار عرض البروتين فقط",
+      "hideCalories": "إخفاء إجمالي السعرات",
+      "warnings": "تحذيرات مقابل اقتراحات",
+      "mealCount": "عدد الوجبات يوميًا",
+      "trainingHelper": "سنعدّل تلقائيًا لأيام التدريب مقابل أيام الراحة.",
+      "advancedToggle": "متقدم",
+      "advancedShow": "إظهار الأرقام الاختيارية",
+      "advancedHide": "إخفاء المقاييس المتقدمة"
     },
     "partnerOnboarding": {
       "creatorIntroTitle": "مرحبًا أيها المنشئ",
