--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -172,30 +172,30 @@
       "saveError": "No pudimos guardar tus preferencias de planificación de comidas. Inténtalo de nuevo."
     },
     "nutritionGoals": {
-      "title": "Nutrition goals",
-      "subtitle": "Tell us how you want to eat so we can surface the right recipes and hints.",
-      "starter": "Starter profile",
-      "categories": "Goal categories",
-      "categoriesHelper": "Pick every bucket that sounds relevant—we’ll resolve overlaps for you.",
-      "daily": "Daily targets",
-      "dailyHelper": "Set the metrics that matter most. Leave anything blank and we’ll adapt dynamically.",
-      "calories": "Calories (kcal)",
-      "protein": "Protein (g)",
-      "fat": "Fat (g)",
-      "carbs": "Carbohydrates (g)",
-      "secondary": "Secondary metrics",
-      "secondaryHelper": "Track these only if they’re relevant to your plan.",
-      "display": "Display preferences",
-      "displayHelper": "Choose what to see in meal views. We’ll still guide you silently.",
-      "perMeal": "Show per-meal targets",
-      "proteinOnly": "Show protein-only view",
-      "hideCalories": "Hide calorie totals",
-      "warnings": "Warnings vs suggestions",
-      "mealCount": "Meals per day",
-      "trainingHelper": "We’ll adjust for training vs rest days automatically.",
-      "advancedToggle": "Advanced",
-      "advancedShow": "Show optional numbers",
-      "advancedHide": "Hide advanced metrics"
+      "title": "Objetivos de nutrición",
+      "subtitle": "Cuéntanos cómo quieres comer para que podamos mostrar las recetas y consejos adecuados.",
+      "starter": "Perfil inicial",
+      "categories": "Categorías de objetivos",
+      "categoriesHelper": "Elige cada categoría que te resulte relevante; resolveremos los solapamientos.",
+      "daily": "Metas diarias",
+      "dailyHelper": "Configura las métricas que más importan. Deja algo en blanco y nos adaptaremos dinámicamente.",
+      "calories": "Calorías (kcal)",
+      "protein": "Proteína (g)",
+      "fat": "Grasa (g)",
+      "carbs": "Carbohidratos (g)",
+      "secondary": "Métricas secundarias",
+      "secondaryHelper": "Sigue estas solo si son relevantes para tu plan.",
+      "display": "Preferencias de visualización",
+      "displayHelper": "Elige qué ver en las vistas de comidas. Aun así te guiaremos en silencio.",
+      "perMeal": "Mostrar objetivos por comida",
+      "proteinOnly": "Mostrar vista solo de proteína",
+      "hideCalories": "Ocultar totales de calorías",
+      "warnings": "Advertencias vs sugerencias",
+      "mealCount": "Comidas por día",
+      "trainingHelper": "Ajustaremos automáticamente para días de entrenamiento y de descanso.",
+      "advancedToggle": "Avanzado",
+      "advancedShow": "Mostrar números opcionales",
+      "advancedHide": "Ocultar métricas avanzadas"
     },
     "partnerOnboarding": {
       "creatorIntroTitle": "Bienvenido, creador",
