--- a/i18n/locales/hi.json
+++ b/i18n/locales/hi.json
@@ -210,29 +210,29 @@
     },
     "nutritionGoals": {
       "title": "पोषण लक्ष्य",
-      "subtitle": "बताएं कि आप कैसे खाना चाहते हैं ताकि हम सही रेसिपी और संकेत दिखा सकें।",
+      "subtitle": "बताइए आप कैसे खाना चाहते हैं ताकि हम सही रेसिपी और संकेत दिखा सकें।",
       "starter": "स्टार्टर प्रोफ़ाइल",
-      "categories": "लक्ष्य श्रेणियां",
-      "categoriesHelper": "जो भी श्रेणी उपयुक्त लगे उसे चुनें—हम ओवरलैप को सुलझा देंगे।",
+      "categories": "लक्ष्य श्रेणियाँ",
+      "categoriesHelper": "जो भी श्रेणी प्रासंगिक लगे, चुनें—ओवरलैप हम संभाल लेंगे।",
       "daily": "दैनिक लक्ष्य",
-      "dailyHelper": "सबसे महत्वपूर्ण मीट्रिक्स सेट करें। कुछ खाली छोड़ें, हम अपने आप अनुकूलित करेंगे।",
+      "dailyHelper": "सबसे महत्वपूर्ण मेट्रिक्स सेट करें। कुछ खाली छोड़ें तो हम अपने आप समायोजित करेंगे।",
       "calories": "कैलोरी (kcal)",
       "protein": "प्रोटीन (g)",
-      "fat": "फैट (g)",
+      "fat": "वसा (g)",
       "carbs": "कार्बोहाइड्रेट (g)",
-      "secondary": "द्वितीयक मीट्रिक्स",
-      "secondaryHelper": "इन्हें केवल तब ट्रैक करें जब वे आपकी योजना के लिए प्रासंगिक हों।",
-      "display": "डिस्प्ले पसंद",
-      "displayHelper": "भोजन दृश्य में क्या देखना है चुनें। हम चुपचाप मार्गदर्शन देंगे।",
-      "perMeal": "प्रति-भोजन लक्ष्य दिखाएं",
-      "proteinOnly": "केवल प्रोटीन दृश्य दिखाएं",
-      "hideCalories": "कुल कैलोरी छुपाएँ",
+      "secondary": "द्वितीयक मेट्रिक्स",
+      "secondaryHelper": "इन्हें तभी ट्रैक करें जब ये आपके प्लान के लिए जरूरी हों।",
+      "display": "डिस्प्ले प्राथमिकताएँ",
+      "displayHelper": "मील व्यू में क्या दिखाना है चुनें। हम चुपचाप मार्गदर्शन करेंगे।",
+      "perMeal": "प्रति भोजन लक्ष्य दिखाएँ",
+      "proteinOnly": "सिर्फ प्रोटीन व्यू दिखाएँ",
+      "hideCalories": "कुल कैलोरी छिपाएँ",
       "warnings": "चेतावनियाँ बनाम सुझाव",
       "mealCount": "प्रति दिन भोजन",
-      "trainingHelper": "हम प्रशिक्षण बनाम आराम दिनों के लिए अपने आप समायोजित करेंगे।",
-      "advancedToggle": "एडवांस्ड",
-      "advancedShow": "वैकल्पिक संख्याएँ दिखाएं",
-      "advancedHide": "एडवांस्ड मीट्रिक्स छुपाएँ"
+      "trainingHelper": "हम प्रशिक्षण बनाम आराम के दिनों के लिए अपने आप समायोजित करेंगे।",
+      "advancedToggle": "उन्नत",
+      "advancedShow": "वैकल्पिक संख्याएँ दिखाएँ",
+      "advancedHide": "उन्नत मेट्रिक्स छिपाएँ"
     },
     "partnerOnboarding": {
       "creatorIntroTitle": "स्वागत है, निर्माता",
