--- a/i18n/locales/tl.json
+++ b/i18n/locales/tl.json
@@ -101,30 +101,30 @@
       "saveError": "Hindi namin ma-save ang iyong cuisine preferences. Pakisubukan ulit."
     },
     "nutritionGoals": {
-      "title": "Nutrition goals",
-      "subtitle": "Tell us how you want to eat so we can surface the right recipes and hints.",
-      "starter": "Starter profile",
-      "categories": "Goal categories",
-      "categoriesHelper": "Pick every bucket that sounds relevant—we’ll resolve overlaps for you.",
-      "daily": "Daily targets",
-      "dailyHelper": "Set the metrics that matter most. Leave anything blank and we’ll adapt dynamically.",
-      "calories": "Calories (kcal)",
-      "protein": "Protein (g)",
-      "fat": "Fat (g)",
-      "carbs": "Carbohydrates (g)",
-      "secondary": "Secondary metrics",
-      "secondaryHelper": "Track these only if they’re relevant to your plan.",
-      "display": "Display preferences",
-      "displayHelper": "Choose what to see in meal views. We’ll still guide you silently.",
-      "perMeal": "Show per-meal targets",
-      "proteinOnly": "Show protein-only view",
-      "hideCalories": "Hide calorie totals",
-      "warnings": "Warnings vs suggestions",
-      "mealCount": "Meals per day",
-      "trainingHelper": "We’ll adjust for training vs rest days automatically.",
+      "title": "Mga layunin sa nutrisyon",
+      "subtitle": "Sabihin sa amin kung paano mo gustong kumain para maipakita namin ang tamang mga recipe at gabay.",
+      "starter": "Panimulang profile",
+      "categories": "Mga kategorya ng layunin",
+      "categoriesHelper": "Piliin ang bawat kategoryang may saysay—aasikasuhin namin ang mga overlap.",
+      "daily": "Pang-araw-araw na target",
+      "dailyHelper": "Itakda ang pinakamahahalagang sukatan. Iwanang blangko ang iba at awtomatiko kaming mag-aangkop.",
+      "calories": "Kaloriya (kcal)",
+      "protein": "Protina (g)",
+      "fat": "Taba (g)",
+      "carbs": "Karbohidrat (g)",
+      "secondary": "Pangalawang sukatan",
+      "secondaryHelper": "Subaybayan lang ito kung may kaugnayan sa iyong plano.",
+      "display": "Mga kagustuhan sa display",
+      "displayHelper": "Piliin kung ano ang makikita sa mga view ng pagkain. Gagabayan ka pa rin namin nang tahimik.",
+      "perMeal": "Ipakita ang mga target bawat pagkain",
+      "proteinOnly": "Ipakita ang protein-only na view",
+      "hideCalories": "Itago ang kabuuang kaloriya",
+      "warnings": "Mga babala kumpara sa mga mungkahi",
+      "mealCount": "Bilang ng pagkain kada araw",
+      "trainingHelper": "Awtomatiko naming iaangkop para sa mga araw ng ehersisyo at pahinga.",
       "advancedToggle": "Advanced",
-      "advancedShow": "Show optional numbers",
-      "advancedHide": "Hide advanced metrics"
+      "advancedShow": "Ipakita ang mga opsyonal na numero",
+      "advancedHide": "Itago ang mga advanced na sukatan"
     },
     "partnerOnboarding": {
       "creatorIntroTitle": "Maligayang pagdating, creator",
