--- a/i18n/locales/ur.json
+++ b/i18n/locales/ur.json
@@ -210,29 +210,29 @@
     },
     "nutritionGoals": {
       "title": "غذائی اہداف",
-      "subtitle": "بتائیں کہ آپ کیسے کھانا چاہتے ہیں تاکہ ہم درست ترکیبیں اور اشارے دکھا سکیں۔",
-      "starter": "اسٹارٹر پروفائل",
+      "subtitle": "ہمیں بتائیں کہ آپ کیسے کھانا چاہتے ہیں تاکہ ہم صحیح ترکیبیں اور رہنمائی دکھا سکیں۔",
+      "starter": "ابتدائی پروفائل",
       "categories": "اہداف کی اقسام",
-      "categoriesHelper": "جو بھی آپشن موزوں لگے منتخب کریں—ہم اوورلیپ کو حل کر دیں گے۔",
+      "categoriesHelper": "جو بھی زمروں سے متعلق لگیں اُنہیں منتخب کریں—ہم اوورلیپ سنبھال لیں گے۔",
       "daily": "روزانہ اہداف",
-      "dailyHelper": "اہم میٹرکس سیٹ کریں۔ کچھ خالی چھوڑیں اور ہم اسے خودکار طور پر ایڈجسٹ کریں گے۔",
+      "dailyHelper": "اہم ترین پیمانے سیٹ کریں۔ کچھ خالی چھوڑیں تو ہم خود بخود ہم آہنگ کر لیں گے۔",
       "calories": "کیلوریز (kcal)",
       "protein": "پروٹین (g)",
       "fat": "چکنائی (g)",
       "carbs": "کاربوہائیڈریٹس (g)",
-      "secondary": "ثانوی میٹرکس",
-      "secondaryHelper": "صرف تب ٹریک کریں جب یہ آپ کے پلان کے لیے متعلق ہوں۔",
+      "secondary": "ثانوی پیمانے",
+      "secondaryHelper": "انہیں صرف اسی صورت میں ٹریک کریں جب یہ آپ کے منصوبے سے متعلق ہوں۔",
       "display": "ڈسپلے کی ترجیحات",
-      "displayHelper": "کھانے کے ویوز میں کیا دیکھنا ہے منتخب کریں۔ ہم خاموشی سے رہنمائی کریں گے۔",
+      "displayHelper": "کھانے کے مناظر میں کیا دکھانا ہے منتخب کریں۔ ہم پھر بھی خاموشی سے رہنمائی کریں گے۔",
       "perMeal": "ہر کھانے کے اہداف دکھائیں",
-      "proteinOnly": "صرف پروٹین ویو دکھائیں",
-      "hideCalories": "کل کیلوریز چھپائیں",
+      "proteinOnly": "صرف پروٹین والا منظر دکھائیں",
+      "hideCalories": "کیلوریز کے مجموعے چھپائیں",
       "warnings": "انتباہات بمقابلہ تجاویز",
       "mealCount": "روزانہ کھانے",
-      "trainingHelper": "ہم تربیت اور آرام کے دنوں کے لیے خودکار طور پر ایڈجسٹ کریں گے۔",
+      "trainingHelper": "ہم تربیتی اور آرام کے دنوں کے لیے خودکار طور پر ایڈجسٹ کریں گے۔",
       "advancedToggle": "ایڈوانسڈ",
       "advancedShow": "اختیاری نمبرز دکھائیں",
-      "advancedHide": "ایڈوانسڈ میٹرکس چھپائیں"
+      "advancedHide": "ایڈوانسڈ پیمانے چھپائیں"
     },
     "partnerOnboarding": {
       "creatorIntroTitle": "خوش آمدید، تخلیق کار",
