--- a/i18n/locales/fr-FR.json
+++ b/i18n/locales/fr-FR.json
@@ -209,30 +209,30 @@
       "saveError": "Nous n’avons pas pu enregistrer vos préférences de planification. Veuillez réessayer."
     },
     "nutritionGoals": {
-      "title": "Nutrition goals",
-      "subtitle": "Tell us how you want to eat so we can surface the right recipes and hints.",
-      "starter": "Starter profile",
-      "categories": "Goal categories",
-      "categoriesHelper": "Pick every bucket that sounds relevant—we’ll resolve overlaps for you.",
-      "daily": "Daily targets",
-      "dailyHelper": "Set the metrics that matter most. Leave anything blank and we’ll adapt dynamically.",
+      "title": "Objectifs nutritionnels",
+      "subtitle": "Dites-nous comment vous souhaitez manger afin que nous proposions les bonnes recettes et indications.",
+      "starter": "Profil de départ",
+      "categories": "Catégories d’objectifs",
+      "categoriesHelper": "Choisissez chaque catégorie qui vous correspond — nous gérerons les chevauchements.",
+      "daily": "Objectifs quotidiens",
+      "dailyHelper": "Définissez les métriques les plus importantes. Laissez vide et nous nous adapterons.",
       "calories": "Calories (kcal)",
-      "protein": "Protein (g)",
-      "fat": "Fat (g)",
-      "carbs": "Carbohydrates (g)",
-      "secondary": "Secondary metrics",
-      "secondaryHelper": "Track these only if they’re relevant to your plan.",
-      "display": "Display preferences",
-      "displayHelper": "Choose what to see in meal views. We’ll still guide you silently.",
-      "perMeal": "Show per-meal targets",
-      "proteinOnly": "Show protein-only view",
-      "hideCalories": "Hide calorie totals",
-      "warnings": "Warnings vs suggestions",
-      "mealCount": "Meals per day",
-      "trainingHelper": "We’ll adjust for training vs rest days automatically.",
-      "advancedToggle": "Advanced",
-      "advancedShow": "Show optional numbers",
-      "advancedHide": "Hide advanced metrics"
+      "protein": "Protéines (g)",
+      "fat": "Lipides (g)",
+      "carbs": "Glucides (g)",
+      "secondary": "Métriques secondaires",
+      "secondaryHelper": "Suivez-les uniquement si elles comptent pour votre plan.",
+      "display": "Préférences d’affichage",
+      "displayHelper": "Choisissez quoi voir dans les vues repas. Nous vous guiderons en arrière-plan.",
+      "perMeal": "Afficher les objectifs par repas",
+      "proteinOnly": "Afficher uniquement les protéines",
+      "hideCalories": "Masquer les totaux de calories",
+      "warnings": "Avertissements vs suggestions",
+      "mealCount": "Repas par jour",
+      "trainingHelper": "Nous ajusterons automatiquement pour les jours d’entraînement ou de repos.",
+      "advancedToggle": "Avancé",
+      "advancedShow": "Afficher les chiffres optionnels",
+      "advancedHide": "Masquer les métriques avancées"
     },
     "partnerOnboarding": {
       "creatorIntroTitle": "Bienvenue, créateur",
