--- a/i18n/locales/vi.json
+++ b/i18n/locales/vi.json
@@ -101,30 +101,30 @@
       "saveError": "Chúng tôi không thể lưu sở thích ẩm thực của bạn. Vui lòng thử lại."
     },
     "nutritionGoals": {
-      "title": "Nutrition goals",
-      "subtitle": "Tell us how you want to eat so we can surface the right recipes and hints.",
-      "starter": "Starter profile",
-      "categories": "Goal categories",
-      "categoriesHelper": "Pick every bucket that sounds relevant—we’ll resolve overlaps for you.",
-      "daily": "Daily targets",
-      "dailyHelper": "Set the metrics that matter most. Leave anything blank and we’ll adapt dynamically.",
-      "calories": "Calories (kcal)",
+      "title": "Mục tiêu dinh dưỡng",
+      "subtitle": "Hãy cho chúng tôi biết bạn muốn ăn như thế nào để chúng tôi gợi ý đúng công thức và mẹo phù hợp.",
+      "starter": "Hồ sơ khởi đầu",
+      "categories": "Danh mục mục tiêu",
+      "categoriesHelper": "Chọn mọi nhóm bạn thấy phù hợp—chúng tôi sẽ xử lý phần chồng lấp.",
+      "daily": "Mục tiêu hằng ngày",
+      "dailyHelper": "Thiết lập các chỉ số quan trọng nhất. Để trống bất kỳ mục nào và chúng tôi sẽ tự điều chỉnh.",
+      "calories": "Calo (kcal)",
       "protein": "Protein (g)",
-      "fat": "Fat (g)",
-      "carbs": "Carbohydrates (g)",
-      "secondary": "Secondary metrics",
-      "secondaryHelper": "Track these only if they’re relevant to your plan.",
-      "display": "Display preferences",
-      "displayHelper": "Choose what to see in meal views. We’ll still guide you silently.",
-      "perMeal": "Show per-meal targets",
-      "proteinOnly": "Show protein-only view",
-      "hideCalories": "Hide calorie totals",
-      "warnings": "Warnings vs suggestions",
-      "mealCount": "Meals per day",
-      "trainingHelper": "We’ll adjust for training vs rest days automatically.",
-      "advancedToggle": "Advanced",
-      "advancedShow": "Show optional numbers",
-      "advancedHide": "Hide advanced metrics"
+      "fat": "Chất béo (g)",
+      "carbs": "Carbohydrate (g)",
+      "secondary": "Chỉ số phụ",
+      "secondaryHelper": "Chỉ theo dõi nếu chúng liên quan đến kế hoạch của bạn.",
+      "display": "Tùy chọn hiển thị",
+      "displayHelper": "Chọn nội dung hiển thị trong chế độ xem bữa ăn. Chúng tôi vẫn sẽ hướng dẫn âm thầm.",
+      "perMeal": "Hiển thị mục tiêu theo bữa",
+      "proteinOnly": "Hiển thị chế độ chỉ protein",
+      "hideCalories": "Ẩn tổng calo",
+      "warnings": "Cảnh báo so với gợi ý",
+      "mealCount": "Số bữa mỗi ngày",
+      "trainingHelper": "Chúng tôi sẽ tự điều chỉnh cho ngày tập và ngày nghỉ.",
+      "advancedToggle": "Nâng cao",
+      "advancedShow": "Hiển thị các số tùy chọn",
+      "advancedHide": "Ẩn các chỉ số nâng cao"
     },
     "partnerOnboarding": {
       "creatorIntroTitle": "Chào mừng, người sáng tạo",
