--- a/i18n/locales/zh.json
+++ b/i18n/locales/zh.json
@@ -101,30 +101,30 @@
       "saveError": "我们无法保存您的美食偏好。请重试。"
     },
     "nutritionGoals": {
-      "title": "Nutrition goals",
-      "subtitle": "Tell us how you want to eat so we can surface the right recipes and hints.",
-      "starter": "Starter profile",
-      "categories": "Goal categories",
-      "categoriesHelper": "Pick every bucket that sounds relevant—we’ll resolve overlaps for you.",
-      "daily": "Daily targets",
-      "dailyHelper": "Set the metrics that matter most. Leave anything blank and we’ll adapt dynamically.",
-      "calories": "Calories (kcal)",
-      "protein": "Protein (g)",
-      "fat": "Fat (g)",
-      "carbs": "Carbohydrates (g)",
-      "secondary": "Secondary metrics",
-      "secondaryHelper": "Track these only if they’re relevant to your plan.",
-      "display": "Display preferences",
-      "displayHelper": "Choose what to see in meal views. We’ll still guide you silently.",
-      "perMeal": "Show per-meal targets",
-      "proteinOnly": "Show protein-only view",
-      "hideCalories": "Hide calorie totals",
-      "warnings": "Warnings vs suggestions",
-      "mealCount": "Meals per day",
-      "trainingHelper": "We’ll adjust for training vs rest days automatically.",
-      "advancedToggle": "Advanced",
-      "advancedShow": "Show optional numbers",
-      "advancedHide": "Hide advanced metrics"
+      "title": "营养目标",
+      "subtitle": "告诉我们你想如何进食，以便我们推荐合适的食谱和提示。",
+      "starter": "入门档案",
+      "categories": "目标类别",
+      "categoriesHelper": "选择所有相关的类别——我们会处理重叠部分。",
+      "daily": "每日目标",
+      "dailyHelper": "设置最重要的指标。留空的部分我们会动态调整。",
+      "calories": "热量（kcal）",
+      "protein": "蛋白质（g）",
+      "fat": "脂肪（g）",
+      "carbs": "碳水化合物（g）",
+      "secondary": "次要指标",
+      "secondaryHelper": "仅在与你的计划相关时跟踪。",
+      "display": "显示偏好",
+      "displayHelper": "选择在餐食视图中显示的内容。我们仍会默默引导。",
+      "perMeal": "显示每餐目标",
+      "proteinOnly": "仅显示蛋白质视图",
+      "hideCalories": "隐藏热量总计",
+      "warnings": "警告与建议",
+      "mealCount": "每日餐次",
+      "trainingHelper": "我们会自动根据训练日和休息日进行调整。",
+      "advancedToggle": "高级",
+      "advancedShow": "显示可选数值",
+      "advancedHide": "隐藏高级指标"
     },
     "partnerOnboarding": {
       "creatorIntroTitle": "欢迎，创作者",
